I forgot to intigrate an outside source so I asked my AI to add axios to my project and then I used it to fetch data from my backend instead of using localStorage. I had it update all relevant code to use axios and fetch from the backend instead of localStorage. I made sure to keep all of the existing functionality intact while making these changes. I requested certain functions to be updated and gave it peramiters to work with to ensure that the changes were made correctly.

--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "url": "https://github.com/Enabwodahs1997/Final-JS-Project/issues"
   },
   "homepage": "https://github.com/Enabwodahs1997/Final-JS-Project#readme",
+  "dependencies": {
+    "axios": "^1.6.0"
+  },
   "devDependencies": {
     "vite": "^7.3.1"
   }
