--- a/vercel.json
+++ b/vercel.json
@@ -3,19 +3,5 @@
   "devCommand": "npm run dev",
   "installCommand": "npm install",
   "framework": "vite",
-  "outputDirectory": "dist",
-  "routes": [
-    {
-      "src": "/transactionPage/(.*)",
-      "dest": "/transactionPage/$1"
-    },
-    {
-      "src": "/history/(.*)",
-      "dest": "/history/$1"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/$1"
-    }
-  ]
+  "outputDirectory": "dist"
 }
