--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "cap:sync": "npm run build && npx cap sync",
+    "cap:open:android": "npx cap open android",
+    "cap:run:android": "npm run cap:sync && npx cap run android"
   },
   "repository": {
     "type": "git",
@@ -22,10 +25,14 @@
   },
   "homepage": "https://github.com/Enabwodahs1997/Final-JS-Project#readme",
   "dependencies": {
+    "@capacitor/android": "^8.1.0",
+    "@capacitor/cli": "^8.1.0",
+    "@capacitor/core": "^8.1.0",
     "axios": "^1.6.0",
     "chart.js": "^4.5.1"
   },
   "devDependencies": {
+    "typescript": "^5.9.3",
     "vite": "^7.3.1"
   }
 }
