--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@capacitor/android": "^8.1.0",
     "@capacitor/cli": "^8.1.0",
     "@capacitor/core": "^8.1.0",
+    "@vercel/speed-insights": "^1.3.1",
     "axios": "^1.6.0",
     "chart.js": "^4.5.1"
   },
