--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "chart.js": "^4.5.1"
   },
   "devDependencies": {
+    "eslint": "^10.0.2",
     "typescript": "^5.9.3",
     "vite": "^7.3.1"
   }
